<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrouncol"
  >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:fontFamily="sans-serif-smallcaps"
        />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:textAlignment="center"
        android:backgroundTint="#c62828"
        android:inputType="textCapWords|textAutoComplete"
        android:textSize="20sp"
        android:id="@+id/edit"
        android:focusable="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_quiz"
        android:textAlignment="center"
        android:text="@string/quiz"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button"
        style="@style/button"
       />

</LinearLayout>